--- a/3/styles.css
+++ b/3/styles.css
@@ -37,21 +37,30 @@ header .icons img {
 .order-item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+    
+}
+
+.service-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+	justify-content: space-between;
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 10px;
+}
+.service-item img{
+    width: 300px;
 }
 
 .order-item img {
-    width: 60px;
+    width: 300px;
     height: 60px;
     border-radius: 5px;
 }
 
 .order-details {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-end;
     width: 100%;
     margin-left: 20px;
@@ -66,6 +75,7 @@ header .icons img {
 .order-details span {
     font-size: 16px;
     color: #666;
+	margin-left: 50%;
 }
 
 .order-button {
