--- a/4/styles.css
+++ b/4/styles.css
@@ -36,7 +36,7 @@ header .icons img {
 
 .order-details-item {
     display: flex;
-    align-items: center;
+    align-items: top;
     justify-content: space-between;
     margin-bottom: 20px;
     border-bottom: 1px solid #ddd;
@@ -44,28 +44,30 @@ header .icons img {
 }
 
 .order-details-item img {
-    width: 60px;
+    width: 300px;
     height: 60px;
     border-radius: 5px;
 }
 
 .details {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    flex-direction: row;
+    align-items: flex-start;
     width: 100%;
-    margin-left: 20px;
+    margin-left: 5px;
 }
 
 .details p {
     font-size: 18px;
     color: #333;
-    margin: 0;
+    margin-left: 5px;
+    margin-top: 5px;
 }
 
 .details span {
     font-size: 16px;
     color: #666;
+	margin-left: 50%;
 }
 
 .details input {
