--- a/2/styles.css
+++ b/2/styles.css
@@ -65,7 +65,8 @@ header .icons img {
 }
 
 .service-item img {
-    width: 300px;
+   position: relative;
+    width: 100%;
     height: 80px;
     border-radius: 5px;
     margin-right: 20px;
@@ -86,7 +87,7 @@ html {
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden; /* Prevent scrollbars during transitions */
+            /*overflow: hidden;  Prevent scrollbars during transitions */
             font-family: Arial, sans-serif;
            /* display: flex;*/
             justify-content: center;
