--- a/4/styles.css
+++ b/4/styles.css
@@ -44,7 +44,8 @@ header .icons img {
 }
 
 .order-details-item img {
-    width: 300px;
+    position: relative;
+    width: 100%;
     height: 60px;
     border-radius: 5px;
 }
@@ -143,7 +144,7 @@ html {
             margin: 0;
             padding: 0;
             height: 100%;
-            overflow: hidden; /* Prevent scrollbars during transitions */
+            /* overflow: hidden; Prevent scrollbars during transitions */
             font-family: Arial, sans-serif;
             
             justify-content: center;
