--- a/3/styles.css
+++ b/3/styles.css
@@ -49,12 +49,14 @@ header .icons img {
 	padding-bottom: 10px;
 }
 .service-item img{
-    width: 300px;
+    position: relative;
+    width: 100%;
     height: 240px;
 }
 
 .order-item img {
-    width: 300px;
+    position: relative;
+    width: 100%;
     height: 60px;
     border-radius: 5px;
 }
