--- a/2/styles.css
+++ b/2/styles.css
@@ -1,8 +1,7 @@
 /* Add this to your existing styles.css */
 
 .services-container {
-    width: 90%;
-    max-width: 400px;
+    width: 400px;
     margin: auto;
     background-color: #fefefe;
     border-radius: 10px;
@@ -65,8 +64,9 @@ header .icons img {
 }
 
 .service-item img {
-   position: relative;
+	position: relative;
     width: 100%;
+	
     height: 80px;
     border-radius: 5px;
     margin-right: 20px;
@@ -84,10 +84,10 @@ header .icons img {
 
 
 html {
+	 
             margin: 0;
             padding: 0;
             height: 100%;
-            /*overflow: hidden;  Prevent scrollbars during transitions */
             font-family: Arial, sans-serif;
            /* display: flex;*/
             justify-content: center;
@@ -98,12 +98,12 @@ html {
 
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); }
-            to { transform: translateX(0); }
+            from { transform: translateX(-100%); width: 400px;}
+            to { transform: translateX(0); width: 400px;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); }
-            to { transform: translateX(200%); }
+            from { transform: translateX(0); width: 400px;}
+            to { transform: translateX(200%); width: 400px;}
         }	
