--- a/4/styles.css
+++ b/4/styles.css
@@ -1,8 +1,7 @@
 /* Add this to your existing styles.css */
 
 .order-details-container {
-    width: 90%;
-    max-width: 400px;
+    width: 400px;
     margin: auto;
     background-color: #fefefe;
     border-radius: 10px;
@@ -31,48 +30,52 @@ header .icons img {
 }
 
 .order-details-list {
-    padding: 20px;
+    padding: 0px;
 }
 
 .order-details-item {
-    display: flex;
-    align-items: top;
+    padding-left: 0px;
+    
     justify-content: space-between;
-    margin-bottom: 20px;
     border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
+    padding-bottom: 16px;
+	
+	display: flex;
+	flex-direction: column;
+    
+	
 }
 
 .order-details-item img {
-    position: relative;
-    width: 100%;
-    height: 60px;
+	margin: auto;
+	
+    width: 300px;
+    height: 50px;
     border-radius: 5px;
 }
 
 .details {
+	margin-left: 50px;
+	
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    width: 50%;
-    margin-left: 5px;
+    align-items: center;
+	
+	
+    width: 50px;
+    
 }
 
 .details p {
-    font-size: 18px;
-    color: #333;
-    margin-left: 5px;
-    margin-top: 5px;
+    margin-left: 5px
 }
 
 .details span {
-    font-size: 16px;
-    color: #666;
-	margin-left: 50%;
+    margin-left: 180px
 }
 
 .details input {
-    margin-top: 10px;
+    
 }
 
 .order-notice {
@@ -86,11 +89,18 @@ footer {
     background-color: #fff;
     padding: 20px;
     border-top: 1px solid #ddd;
+	display: flex;
+	flex-direction: column;
+    justify-content: space-between;
+	align-items: center;
+    
 }
 
 .pickup-delivery-options {
     display: flex;
-    justify-content: space-around;
+	flex-direction: row;
+	gap: 100px;
+   
     margin-bottom: 20px;
 }
 
@@ -127,7 +137,7 @@ footer {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    width: 100%;
+    width: 300px;
 }
 
 .checkout-button:hover {
@@ -141,6 +151,7 @@ footer {
 
 
 html {
+			/*position:absolute; */
             margin: 0;
             padding: 0;
             height: 100%;
@@ -155,12 +166,13 @@ html {
 
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); }
-            to { transform: translateX(0); }
+			
+            from { transform: translateX(-100%); width: 400px;}
+            to { transform: translateX(0); width: 400px;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); }
-            to { transform: translateX(200%); }
+            from { transform: translateX(0); width: 400px;}
+            to { transform: translateX(200%); width: 400px;}
         }	
