--- a/1.5/styles.css
+++ b/1.5/styles.css
@@ -106,14 +106,15 @@ html {
             animation: slideIn 1s forwards;
 }
 
+
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); }
-            to { transform: translateX(0); }
+            from { opacity: 0%;}
+            to { opacity: 100%;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); }
-            to { transform: translateX(200%); }
+            from { opacity: 100%;}
+            to { opacity: 0%;}
         }	
