--- a/2/styles.css
+++ b/2/styles.css
@@ -1,12 +1,12 @@
 /* Add this to your existing styles.css */
 
 .services-container {
-    width: 400px;
+    width: 100%;
     margin: auto;
     background-color: #fefefe;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    
     padding-bottom: 20px;
 }
 
@@ -42,7 +42,7 @@ header .icons img {
 }
 
 .service-list {
-    padding: 20px;
+    padding-left: 5%;padding-right: 5%;
 }
 
 .service-item {
@@ -58,18 +58,14 @@ header .icons img {
     transform: scale(1.05);
 }
 
-.service-item img, .order-item img {
-    width: 100%;
-    border-radius: 5px;
-}
 
 .service-item img {
-	position: relative;
+    margin : auto;
     width: 100%;
-	
-    height: 80px;
+    max-width: 220px;
+    height: 60px;
     border-radius: 5px;
-    margin-right: 20px;
+	padding-right: 15%;
 }
 
 .service-item p {
@@ -84,10 +80,10 @@ header .icons img {
 
 
 html {
-	 
             margin: 0;
             padding: 0;
             height: 100%;
+            /* overflow: hidden; Prevent scrollbars during transitions */
             font-family: Arial, sans-serif;
            /* display: flex;*/
             justify-content: center;
@@ -98,12 +94,12 @@ html {
 
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); width: 400px;}
-            to { transform: translateX(0); width: 400px;}
+            from { opacity: 0%;}
+            to { opacity: 100%;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); width: 400px;}
-            to { transform: translateX(200%); width: 400px;}
+            from { opacity: 100%;}
+            to { opacity: 0%;}
         }	
