--- a/3/styles.css
+++ b/3/styles.css
@@ -1,12 +1,12 @@
 /* Add this to your existing styles.css */
 
 .orders-container {
-    width: 400px;
+    width: 100%;
     margin: auto;
     background-color: #fefefe;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    
     padding-bottom: 20px;
 }
 
@@ -36,11 +36,13 @@ header .icons img {
 .order-item {
     
     
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 5px;
-	
-	display: flex;
+    display: flex;
 	flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+	justify-content: space-between;
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 10px;
     
 }
 
@@ -52,11 +54,23 @@ header .icons img {
 	justify-content: space-between;
 	border-bottom: 1px solid #ddd;
 	padding-bottom: 10px;
+	
+	
+	border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: transform 0.3s ease;
+
 }
+
+.service-item:hover {
+    transform: scale(1.05);
+}
+
 .service-item img{
    
     width: 300px;
-    height: 240px;
+    height: 170px;
 }
 
 .order-item img {
@@ -68,14 +82,14 @@ header .icons img {
 
 .order-details {
 	
-    margin-left: 50px;
+    
 	
     display: flex;
     flex-direction: row;
     align-items: center;
 	
-	
-    width: 50px;
+	padding-left: 0px;
+    
 }
 
 .order-details p{
@@ -136,12 +150,12 @@ html {
 
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); width: 400px;}
-            to { transform: translateX(0); width: 400px;}
+            from { opacity: 0%;}
+            to { opacity: 100%;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); width: 400px;}
-            to { transform: translateX(200%); width: 400px;}
+            from { opacity: 100%;}
+            to { opacity: 0%;}
         }	
