--- a/5/styles.css
+++ b/5/styles.css
@@ -1,7 +1,7 @@
 /* Add this to your existing styles.css */
 
 .checkout-container {
-    width: 400px;
+    width: 100%;
     
     margin: auto;
     background-color: #fefefe;
@@ -139,14 +139,15 @@ html {
             animation: slideIn 1s forwards;
 }
 
+
 /* Slide in effect */
         @keyframes slideIn {
-            from { transform: translateX(-100%); width: 400px;}
-            to { transform: translateX(0); width: 400px;}
+            from { opacity: 0%;}
+            to { opacity: 100%;}
         }
 
         /* Slide out effect */
         @keyframes slideOut {
-            from { transform: translateX(0); width: 400px;}
-            to { transform: translateX(200%); width: 400px;}
+            from { opacity: 100%;}
+            to { opacity: 0%;}
         }	
